# LIVENESS_DETECTION

./: .gitattributes  .gitignore  DATA_ASSETS.md  FLASH_LIVENESS_PROJECT_README.md  FLASH_LIVENESS_PROJECT_V2_README.md  FUSED_FACE_LIVENESS_API_README.md  Face_compare.py  Face_detection_yolo_align.py  Face_infer_score.py  GITHUB_RELEASE_GUIDE.md  PROJECT_STRUCTURE.md  README.md  THUNDERGUARD_REPRO.md  Test_by_jupyter.ipynb  face_interactive_liveness.py  flash_liveness_api.py  flash_liveness_infer_utils.py  flash_liveness_project.py  flash_liveness_project_v2.py  flash_liveness_project_v3.py  flash_liveness_project_v3_1.py  flash_liveness_train_command_gpu1_v2.txt  flash_physical_features.py  fused_face_liveness_api.py  fused_face_liveness_api_v2.py  fused_face_liveness_eval.py  requirements.txt  server_storage_manager.py
Face-Anti-Spoofing-using-DeePixBiS/: Test.py  Test_by_plt.py  infer_demo.py  infer_images.py
archive_20240320_flash_liveness/: MOEA_ALGORITHM_README.md  README.md  读我.txt
archive_20240320_flash_liveness/FaceAlign/falib/: CMakeLists.txt  libfa_api.cpp  libfa_api.h  nx_fa_export.cpp  nx_fa_export.h
archive_20240320_flash_liveness/FaceAlign/falib/cmake/: build_android.sh
archive_20240320_flash_liveness/FaceAlign/falib/include/: fa.h  face_align.h  face_depth_map.h  img_proc.h
archive_20240320_flash_liveness/FaceAlign/falib/source/: fa.cpp  face_align.cpp  face_depth_map.cpp  img_proc.cpp
archive_20240320_flash_liveness/FaceAlign/falib_demo/: CMakeLists.txt  main.cpp  nx_fa_export.h
archive_20240320_flash_liveness/ThunderGuard/libtg/: CMakeLists.txt  build_android_64.sh  libtg_api.cpp  libtg_api.h  nx_tg_export.cpp  nx_tg_export.h
archive_20240320_flash_liveness/ThunderGuard/libtg/include/: img_choose.h  normal_cues.h  tg.h
archive_20240320_flash_liveness/ThunderGuard/libtg/source/: img_choose.cpp  normal_cues.cpp  tg.cpp
backbones/: __init__.py  iresnet.py
flash_collect_stimulus_api_service/: README.md  __init__.py  app.py  run_api_command.txt
flash_liveness_v3_api_service/: API_CALL_MANUAL.md  README.md  __init__.py  app.py  run_api_command.txt  service.py
scripts/: analyze_flash_liveness_v1_predictions.py  analyze_flash_physical_cues.py  analyze_thunderguard_export_gap.py  build_flash_liveness_fixed_protocol_dataset.py  build_thunderguard_single_image_test_sample.py  build_thunderguard_smoke_subset.py  cleanup_server_storage.py  collect_flash_liveness_video.py  collect_flash_liveness_video_2.py  download_flash_liveness_raw_data.py  evaluate_flash_liveness_checkpoint.py  evaluate_flash_liveness_v2_mixed.py  evaluate_flash_liveness_video.py  evaluate_flash_liveness_video_v2.py  evaluate_fused_face_liveness_api_v1_local.py  evaluate_minifasnetv2_infer_demo_dataset.py  evaluate_thunderguard_model_only_local.py  evaluate_thunderguard_tg_export_dataset.py  export_current_dataset_to_tg_export.py  infer_flash_liveness_images.py  infer_flash_liveness_v3_video.py  legacy_facecollect_capture.py  organize_flash_liveness_assets_by_type.py  prepare_flash_liveness_best_dataset.py  prepare_flash_liveness_new_domain_video_protocol.py  prepare_flash_liveness_video_dataset.py  prepare_flash_liveness_video_dataset_v2.py  run_flash_liveness_best_training.sh  run_flash_liveness_best_training_nan_guard.sh  run_flash_liveness_training.sh  run_flash_liveness_v3_1_window_training.sh  run_flash_liveness_v3_gpu012_training.sh  run_thunderguard_train.sh  setup_thunderguard_sample_links.sh  test_flash_liveness_v1_collect_protocol.py  visualize_flash_six_channel.py
yolov7_face/: FACE_detect.py  data_infer_mask_2cls.py  data_rec_imshow.py  detect.py  face_bank_client.py  face_bank_service.py  face_bank_service2.py  face_bank_service_fast_ada.py  face_bank_service_fast_ada_xt.py  test.sh  (+6 more)
(+103 files in other folders)
